--- a/angular-project/src/app/shell/header/header.component.html
+++ b/angular-project/src/app/shell/header/header.component.html
@@ -1,9 +1,9 @@
 <header>
     <div class="container">
         <div class="left-side">
-            <p>hi</p>
+            
         </div>
-        <a href="#" routerLink="/" class="logo">Something</a>
+        <a href="#" routerLink="/" class="logo">Diverse</a>
         <div class="right-side">
             <span class="material-symbols-outlined">
                 shopping_cart
