--- a/angular-project/src/styles.scss
+++ b/angular-project/src/styles.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -13,40 +12,51 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $angular-project-primary: mat.define-palette(mat.$indigo-palette);
-$angular-project-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$angular-project-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
 
 // The warn palette is optional (defaults to red).
 $angular-project-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-project-theme: mat.define-light-theme((
-  color: (
-    primary: $angular-project-primary,
-    accent: $angular-project-accent,
-    warn: $angular-project-warn,
+$angular-project-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $angular-project-primary,
+      accent: $angular-project-accent,
+      warn: $angular-project-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($angular-project-theme);
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import "src/variables.scss";
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 * {
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
 }
 
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  background-color: $beige;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
