--- a/angular-project/src/variables.scss
+++ b/angular-project/src/variables.scss
@@ -1,4 +1,4 @@
-$brown-dark: #561C24;
-$brown-light: #6D2932;
-$beige-dark: #C7B7A3;
-$beige-light: #E8D8C4;
+$navy-dark: #161A30;
+$navy-light: #31304D;
+$grey-light: #B6BBC4;
+$beige: #F0ECE5;
