--- a/angular-project/src/variables.scss
+++ b/angular-project/src/variables.scss
@@ -1,4 +1,4 @@
-$navy-dark: #161A30;
-$navy-light: #31304D;
-$grey-light: #B6BBC4;
-$beige: #F0ECE5;
+$yellow: #E8C872;
+$beige: #FFF3CF;
+$light-blue: #C9D7DD;
+$blue: #637A9F;
