--- a/angular-project/src/variables.scss
+++ b/angular-project/src/variables.scss
@@ -1,4 +1,9 @@
-$yellow: #E8C872;
-$beige: #FFF3CF;
-$light-blue: #C9D7DD;
-$blue: #637A9F;
+$beige: #E8D8C4;
+$dark-beige: #C7B7A3;
+$light-brown: #6D2932;
+$dark-brown: #561C24;
+
+@font-face {
+    font-family: 'Material Symbols Outlined';
+    src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v39/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2) format('woff2');
+}
