--- a/angular-project/src/styles.scss
+++ b/angular-project/src/styles.scss
@@ -60,3 +60,19 @@ body {
 a {
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $dark-brown;
+  border-radius: 1rem;
+}
+::-webkit-scrollbar-track {
+  background-color: $beige; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: $light-brown;
+}
