--- a/angular-project/src/app/shell/home/home.component.html
+++ b/angular-project/src/app/shell/home/home.component.html
@@ -1,20 +1,48 @@
+<div class="main" *ngIf="showContent"> <!--[@fadeIn]-->
+  <app-search></app-search>
+<p class="no-food" *ngIf="noFood">No Food Found!</p>
 <div class="container">
-    <div *ngFor="let food of foods">
-        <a>
-            <img src="{{food.imageUrl}}" alt="">
-            <div class="content">
-                <div class="name">
-                    {{food.name}}
-                </div>
-                <span class="{{food.favorite ? 'material-symbols-outlined filled' : 'material-symbols-outlined'}}" (click)="onClick(food)">
-                    favorite
-                </span>
-                <div class="stars">
-                    <star-rating [stars]="food.stars"/>
-                </div>
-            </div>
-        </a>
+  <div *ngFor="let food of foods">
+    <div class="cards">
+      <a>
+        <img src="{{ food.imageUrl }}" alt="" />
+      </a>
+      <div class="content">
+        <div class="name">
+          {{ food.name }}
+        </div>
+        <span
+          class="{{
+            food.favorite
+              ? 'material-symbols-outlined filled'
+              : 'material-symbols-outlined'
+          }}"
+          (click)="onClick(food)"
+        >
+          favorite
+        </span>
+        <div class="stars">
+          <star-rating [stars]="food.stars" />
+        </div>
+        <div class="product-item-footer">
+          <div class="origins">
+            <span *ngFor="let origin of food.origins">
+              {{ origin }}
+            </span>
+          </div>
+          <div class="cook-time">
+            <span class="material-symbols-outlined"> schedule </span>
+            <p>{{ food.cookTime }}</p>
+          </div>
+        </div>
+        <div class="price">
+            <span>
+                {{food.price|currency}}
+            </span>
+        </div>
+      </div>
     </div>
-    <div style="font-variation-settings: 'FILL' 0, 'wght' 100, 'GRAD' 0, 'opsz' 48;">
-        <span class="material-symbols-outlined">home</span>
+  </div>
 </div>
+</div>
+
