--- a/angular-project/src/app/shell/partials/star-rating/star-rating.component.scss
+++ b/angular-project/src/app/shell/partials/star-rating/star-rating.component.scss
@@ -4,5 +4,8 @@
     display: flex;
     flex-wrap: nowrap;
     margin-top: 0.4rem;
-    
+    img {
+        width: 1.6rem;
+        height: 1.6rem;
+    }
 }
