--- a/angular-project/src/app/shell/home/home.component.html
+++ b/angular-project/src/app/shell/home/home.component.html
@@ -1,10 +1,11 @@
 <div class="main" *ngIf="showContent"> <!--[@fadeIn]-->
   <app-search></app-search>
+  <app-tags></app-tags>
 <p class="no-food" *ngIf="noFood">No Food Found!</p>
 <div class="container">
   <div *ngFor="let food of foods">
     <div class="cards">
-      <a>
+      <a routerLink="/food/{{food.id}}">
         <img src="{{ food.imageUrl }}" alt="" />
       </a>
       <div class="content">
