--- a/angular-project/src/app/shell/food-page/food-page.component.scss
+++ b/angular-project/src/app/shell/food-page/food-page.component.scss
@@ -35,6 +35,10 @@
     font-variation-settings: "FILL" 0;
     color: $dark-brown;
     font-size: 2.5rem;
+    transition: color 0.3s ease-in-out;
+    &:hover {
+      color: $light-brown;
+    }
   }
   .filled {
     font-variation-settings: "FILL" 1;
@@ -55,9 +59,46 @@
     span {
         padding: 0.5rem;
         font-size: 1.2rem;
-        margin: 0.5rem;
         border-radius: 2rem;
         background-color: $dark-beige;
     }
+  }
+  .cook-time {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    .material-symbols-outlined {
+      cursor: auto;
+      font-size: 2.5rem;
+      margin-right: 0.3rem;
+    }
+  }
+}
+
+
+.price {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 2.5rem;
+  margin: 2rem 0;
+  p {
+    color: $light-brown;
+    margin-right: 0.5rem;
+    font-size: 2rem;
+  }
+}
+
+.cart {
+  border: none;
+  background-color: $dark-brown;
+  padding: 1rem;
+  border-radius: 10rem;
+  font-size: 1.5rem;
+  color: $beige;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  &:hover {
+    background-color: $light-brown;
   }
 }
