--- a/angular-project/src/app/shell/header/header.component.scss
+++ b/angular-project/src/app/shell/header/header.component.scss
@@ -4,7 +4,7 @@
 .container {
     display: flex;
     height: 5rem;
-    border-bottom: 1px solid $dark-brown;
+    border-bottom: 0.25rem solid $dark-brown;
     justify-content: space-between;
     align-items: center;
     a {
@@ -29,7 +29,15 @@
         span {
             color: $dark-brown;
             font-size: 2.5rem;
+            margin-right: 0.6rem;
+            padding: 0.7rem;
+            border-radius: 50%;
             font-variation-settings: 'FILL' 1;
+            cursor: pointer;
+            transition: background-color 0.3s ease-in-out;
+            &:hover {
+                background-color: $dark-beige;
+            }
         }
     }
 }
