--- a/angular-project/src/app/shell/home/home.component.scss
+++ b/angular-project/src/app/shell/home/home.component.scss
@@ -57,6 +57,10 @@
       top: 0.2rem;
       right: 1rem;
       font-size: 2rem;
+      transition: color 0.3s ease-in-out;
+      &:hover {
+        color: $light-brown;
+      }
     }
     .filled {
       font-variation-settings: "FILL" 1;
