--- a/angular-project/src/app/shell/header/header.component.html
+++ b/angular-project/src/app/shell/header/header.component.html
@@ -5,7 +5,7 @@
         </div>
         <a href="#" routerLink="/" class="logo">Diverse</a>
         <div class="right-side">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" routerLink="/cart-page">
                 shopping_cart
             </span>
         </div>
