--- a/angular-project/src/app/shell/sidebar/sidebar.component.html
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.html
@@ -1,1 +1,17 @@
-<p>sidebar works!</p>
+<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
+    <div class="logo-container">
+        <span class="material-symbols-outlined">
+            menu
+        </span>
+    </div>
+    <ul class="sidenav-nav">
+        <li class="sidenav-nav-item" *ngFor="let data of navData">
+            <a class="sidenav-nav-link" [routerLink]="[data.routeLink]">
+                <span class="material-symbols-outlined">
+                    {{data.icon}} 
+                </span>
+                <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
+            </a>
+        </li>
+    </ul>
+</div>
