--- a/angular-project/src/app/shell/header/header.component.html
+++ b/angular-project/src/app/shell/header/header.component.html
@@ -1,9 +1,11 @@
 <header>
     <div class="container">
         <div class="left-side">
-            
+            <span class="material-symbols-outlined" (click)="toggleSidebar()">
+                menu
+            </span>
         </div>
-        <a href="#" routerLink="/" class="logo">Diverse</a>
+        <a routerLink="" class="logo">Diverse</a>
         <div class="right-side">
             <span class="material-symbols-outlined" routerLink="/cart-page">
                 shopping_cart
