--- a/angular-project/src/app/shell/sidebar/sidebar.component.html
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.html
@@ -1,17 +1,14 @@
-<div class="sidenav" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
-    <div class="logo-container">
-        <span class="material-symbols-outlined">
-            menu
-        </span>
-    </div>
+<div class="sidenav" [ngClass]="!sidebarService.collapsed ? 'sidenav-collapsed' : ''">
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
             <a class="sidenav-nav-link" [routerLink]="[data.routeLink]">
-                <span class="material-symbols-outlined">
+                <span class="material-symbols-outlined sidenav-link-icon">
                     {{data.icon}} 
                 </span>
-                <span class="sidenav-link-text" *ngIf="collapsed">{{data.label}}</span>
+                <span class="sidenav-link-text" *ngIf="!sidebarService.collapsed">{{data.label}}</span>
             </a>
         </li>
     </ul>
 </div>
+
+<div class="dimm" *ngIf="!sidebarService.collapsed"></div>
