--- a/angular-project/src/app/shell/sidebar/sidebar.component.html
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav" [ngClass]="!sidebarService.collapsed ? 'sidenav-collapsed' : ''">
+<div class="sidenav" *ngIf="!sidebarService.collapsed">
     <ul class="sidenav-nav">
         <li class="sidenav-nav-item" *ngFor="let data of navData">
             <a class="sidenav-nav-link" [routerLink]="[data.routeLink]">
