--- a/angular-project/src/app/shell/register/register.component.html
+++ b/angular-project/src/app/shell/register/register.component.html
@@ -75,6 +75,10 @@
   <div>Alredy a member? <a routerLink="/login">Log in</a></div>
 </form> -->
 
+<!-- სერვერის ჩართვა დალოგინებისთვის ამის გარეშე არ მუშაობს დალოგინება!!!
+  npx json-server db.json
+ -->
+
 <form
   [formGroup]="registerForm"
   (ngSubmit)="submitDetails()"
