--- a/angular-project/src/app/shell/login/login.component.scss
+++ b/angular-project/src/app/shell/login/login.component.scss
@@ -1,5 +1,1 @@
-@import "../../../variables.scss";
-
-.gradient-custom {
-  background: $dark-beige;
-}
+@import "~bootstrap/dist/css/bootstrap.min.css";
