--- a/angular-project/src/app/shell/sidebar/sidebar.component.scss
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.scss
@@ -51,6 +51,20 @@
             }
         }
     }
+
+    .footer {
+        flex-grow: 1;
+        display: flex;
+        position: relative;
+        .ftr {
+            flex-grow: 1;
+            align-items: flex-start;
+            justify-content: flex-end;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+    }
 }
 
 .dimm {
