--- a/angular-project/src/app/shell/register/register.component.html
+++ b/angular-project/src/app/shell/register/register.component.html
@@ -201,7 +201,7 @@
                 [disabled]="registerForm.invalid"
                 type="submit"
               >
-                SING IN
+                SIGN UP
               </button>
 
               <div
@@ -212,7 +212,7 @@
             <div>
               <p class="mb-0">
                 Alredy a member?
-                <a routerLink="/login" class="text-white-50 fw-bold">Sign Up</a>
+                <a routerLink="/login" class="text-white-50 fw-bold">Log In</a>
               </p>
             </div>
           </div>
