--- a/angular-project/src/app/shell/sidebar/sidebar.component.html
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="sidenav-nav-item" (click)="onClicked()">
-                    <a class="sidenav-nav-link" routerLink="/login">
+                    <a class="sidenav-nav-link" routerLink="/register">
                         <span class="material-symbols-outlined sidenav-link-icon">
                             how_to_reg
                         </span>
