--- a/angular-project/src/app/shell/login/login.component.html
+++ b/angular-project/src/app/shell/login/login.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="loginForm" (ngSubmit)="loginUser()" class="login-form">
+  <h1>Sign In</h1>
   <div class="form-group">
     <label for="email">Email:</label>
     <input
@@ -32,7 +33,7 @@
       <div *ngIf="password.errors?.['required']">Password is required</div>
     </small>
   </div>
-  <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">
+  <button type="submit" [disabled]="loginForm.invalid" class="submit-button">
     Sign In
   </button>
   <div class="register-link">
