--- a/angular-project/src/app/shell/register/register.component.html
+++ b/angular-project/src/app/shell/register/register.component.html
@@ -4,6 +4,7 @@
   class="register-form"
 >
   <div class="form-group">
+    <h1>Register</h1>
     <label for="fullName">Full Name:</label>
     <input
       type="text"
@@ -81,7 +82,7 @@
   <button
     type="submit"
     [disabled]="registerForm.invalid"
-    class="btn btn-primary"
+    class="submit-button"
   >
     Register
   </button>
