Countries added, page not found added

--- a/angular-project/src/app/shell/home/home.component.html
+++ b/angular-project/src/app/shell/home/home.component.html
@@ -27,8 +27,8 @@
         </div>
         <div class="product-item-footer">
           <div class="origins">
-            <span *ngFor="let origin of food.origins">
-              {{ origin }}
+            <span *ngFor="let tag of food.tags">
+              {{ tag }}
             </span>
           </div>
           <div class="cook-time">
