cart-page restriction without login

--- a/angular-project/src/app/shell/cart-page/cart-page.component.scss
+++ b/angular-project/src/app/shell/cart-page/cart-page.component.scss
@@ -105,3 +105,31 @@
         }
     }
 }
+
+.no-access {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 5rem;
+    font-size: 1.5rem;
+    height: 20vh;
+    div {
+        display: flex;
+        margin-top: 1rem;
+        a {
+            font-size: 1rem;
+            text-decoration: none;
+            color: $beige;
+            background-color: $dark-brown;
+            border-radius: 10rem;
+            padding: 0.7rem 1rem;
+            margin: 1rem;
+            transition: background-color 0.3s ease-in-out;
+            cursor: pointer;
+            &:hover {
+                background-color: $light-brown;
+            }
+        }
+    }
+}
