--- a/angular-project/src/app/shell/sidebar/sidebar.component.html
+++ b/angular-project/src/app/shell/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li class="sidenav-nav-item" (click)="onClicked()" *ngIf="isLoggedIn()">
-          <a class="sidenav-nav-link" routerLink="/login" (click)="logout()">
+          <a class="sidenav-nav-link" routerLink="" (click)="logout()">
             <span class="material-symbols-outlined sidenav-link-icon">
               logout
             </span>
