--- a/angular-project/src/app/shell/cart-page/cart-page.component.html
+++ b/angular-project/src/app/shell/cart-page/cart-page.component.html
@@ -1,9 +1,15 @@
-<app-not-found [visible]="!cart || cart.items.length <= 0"
+<div class="no-access" *ngIf="!isLoggedIn()">
+    You need to Log in to access the cart page
+    <div>
+        <a routerLink="/login">Go to Login Page</a>
+        <a routerLink="/register">Go to Register Page</a>
+    </div>
+</div>
+<app-not-found [visible]="!cart || cart.items.length <= 0 && isLoggedIn()"
 notFoundMessage="Cart Page Is Empty!"
 resetLinkText="Go To Homepage"
-
 ></app-not-found>
-<div *ngIf="cart && cart.items.length > 0" class="container">
+<div *ngIf="cart && cart.items.length > 0 && isLoggedIn()" class="container">
     <div class="cont">
         <div *ngFor="let cartItem of cart.items" class="cart-items">
             <div>
