--- a/angular-project/src/app/shell/footer/footer.component.html
+++ b/angular-project/src/app/shell/footer/footer.component.html
@@ -28,12 +28,11 @@
             Copyright &copy; 2017 All Rights Reserved by Diverse
         </div>
         <div class="icons">
-            <span class="material-symbols-outlined">
-                html
-            </span>
-            <span class="material-symbols-outlined">
-                css
-            </span>
+            <a href="">
+                <span class="material-symbols-outlined">
+                    restaurant
+                </span>
+            </a>
         </div>
     </div>
 </div>
