--- a/angular-project/src/app/shell/footer/footer.component.html
+++ b/angular-project/src/app/shell/footer/footer.component.html
@@ -3,29 +3,23 @@
         <div class="about">
             <h2>About</h2>
             <p class="about-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid amet et eum perspiciatis reprehenderit tempore minus, rem quia cum, ratione eligendi ea, dolore quam placeat laudantium sed possimus numquam? Nobis!
+                Food is a language which all of the people speak, we want to unite different socities through the amazing cuisine of various countries, try our diverse food choices you won't regret it!
             </p>
         </div>
         <div class="add-info">
             <div class="categories">
-                <h2>Categories</h2>
-                <p>first</p>
-                <p>second</p>
-                <p>third</p>
-                <p>fourth</p>
-            </div>
-            <div class="quick-links">
-                <h2>Links</h2>
-                <p>first</p>
-                <p>second</p>
-                <p>third</p>
-                <p>fourth</p>
+                <h2>Countries</h2>
+                <a href="country/georgia"><p>Georgia</p></a>
+                <a href="country/italy"><p>Italy</p></a>
+                <a href="country/france"><p>France</p></a>
+                <a href="country/india"><p>India</p></a>
+                <a href="country/america"><p>America</p></a>
             </div>
         </div>
     </div>
     <div class="lower-side">
         <div class="copyright">
-            Copyright &copy; 2017 All Rights Reserved by Diverse
+            Copyright &copy; 2024 All Rights Reserved by Diverse
         </div>
         <div class="icons">
             <a href="">
