--- a/angular-project/src/app/shell/home/home.component.html
+++ b/angular-project/src/app/shell/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="main" *ngIf="showContent" > <!--[@fadeIn]-->
+  <app-welcome></app-welcome>
+  <app-carousel></app-carousel>
   <app-search></app-search>
   <app-tags></app-tags>
 <p class="no-food" *ngIf="noFood">No Food Found!</p>
