searchbar bug fixed

--- a/angular-project/src/app/shell/header/header.component.html
+++ b/angular-project/src/app/shell/header/header.component.html
@@ -5,7 +5,7 @@
                 menu
             </span>
         </div>
-        <a routerLink="" class="logo">Diverse</a>
+        <a class="logo" (click)="ScrollToTop()">Diverse</a>
         <div class="right-side">
             <span class="material-symbols-outlined" routerLink="/cart-page">
                 shopping_cart
