--- a/angular-project/src/app/shell/home/search/search.component.html
+++ b/angular-project/src/app/shell/home/search/search.component.html
@@ -13,5 +13,5 @@
         </symbol>
     </svg>
     <a class="dribbble" href="https://dribbble.com/shots/5547403-Search-input-animation" target="_blank"><img src="https://dribbble.com/assets/logo-small-2x-9fe74d2ad7b25fba0f50168523c15fda4c35534f9ea0b1011179275383035439.png" alt=""></a>
-    <button class="clear" *ngIf="searchMode" (click)="clear()">Back</button>
+    <button class="clear" *ngIf="searchTerm !== '' && searchMode" (click)="clear()">Back</button>
 </div>
