--- a/angular-project/src/app/shell/cart-page/cart-page.component.scss
+++ b/angular-project/src/app/shell/cart-page/cart-page.component.scss
@@ -124,7 +124,7 @@
             background-color: $dark-brown;
             border-radius: 10rem;
             padding: 0.7rem 1rem;
-            margin: 1rem;
+            margin: 1rem 0.5rem;
             transition: background-color 0.3s ease-in-out;
             cursor: pointer;
             &:hover {
