--- a/angular-project/src/app/shell/register/register.component.html
+++ b/angular-project/src/app/shell/register/register.component.html
@@ -31,7 +31,7 @@
       class="form-control"
     />
     <small *ngIf="emile.invalid && (emile.dirty || emile.touched)">
-      <div *ngIf="emile.errors?.['required']">Emile is required</div>
+      <div *ngIf="emile.errors?.['required']">Email is required</div>
       <div *ngIf="emile.errors?.['emile']" style="color: red">
         Emile should be valid
       </div>
