--- a/angular-project/src/app/shell/countries/italy/italy.component.html
+++ b/angular-project/src/app/shell/countries/italy/italy.component.html
@@ -1,5 +1,5 @@
 <div class="main" *ngIf="showContent" > <!--[@fadeIn]-->
-    <app-search></app-search>
+  <app-search-italy></app-search-italy>
   <p class="no-food" *ngIf="noFood">No Food Found!</p>
   <div class="container">
     <div *ngFor="let food of foods">
