--- a/angular-project/src/app/shell/login/login.component.scss
+++ b/angular-project/src/app/shell/login/login.component.scss
@@ -44,6 +44,7 @@ input[type="password"] {
 .error-message {
   color: $light-brown;
   font-size: 1rem;
+  margin-bottom: 1rem;
 }
 
 .submit-button {
